# nighres

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  .travis.yml  CONTRIBUTING.md  Dockerfile  GIRAFFE.yml  LICENSE.md  MANIFEST.in  Makefile  NighresSingularity.def  README.md  README.rst  build-nodependencies.sh  build.sh  build_alpha.sh  build_local_cbstools.sh  build_local_imcntk.sh  build_local_nighresjava.sh  cbstools-lib-files.sh  clean_install.sh  conda-nighres.yml  conda-nighres_dev.yml  create_container_recipe.sh  dependencies_sha.sh  docker-compose.yml  fbpa-tools-files.sh  imcntk-lib-files.sh  jupyter_notebook_config.py  requirements.txt  setup.cfg  setup.py  test_docker_trusty.sh  travis.yml
GIRAFFE/: porcupine_pipeline.pork
cbstools/: __init__.py
cbstoolspython/: __init__.py  example_pipeline.py  global_settings.py  todo  utils.py
doc/: Makefile  conf.py  data_formats.rst  index.rst  installation.rst  levelsets.rst  make.bat  modules.rst  nighres.brain.mgdm_segmentation.rst  nighres.brain.rst  nighres.example_pipeline.rst  nighres.global_settings.rst  nighres.io.io_mesh.rst  nighres.laminar.rst  nighres.surface.probability_to_levelset.rst  nighres.utils.rst  requirements.txt  saving.rst
docs/: conf.py  index.rst  nighres.brain.rst  nighres.io.rst  nighres.laminar.rst  nighres.rst  nighres.surface.rst
examples/: README.txt  example_01_tissue_classification.py  example_02_cortical_depth_estimation.py  example_03_brain_coregistration.py  example_04_multiatlas_segmentation.py  example_05_dots_segmentation.py  example_06_dots_segmentation.py  (+13 more)
(+421 files in other folders)
