[metadata]
name = nighres
version = 1.5.2
description = Processing tools for high-resolution neuroimaging
long_description = file: README.rst
long_description_content_type = text/rst
url = https://nighres.readthedocs.io/
author = 
    Julia M Huntenburg, 
    Pierre-Louis Bazin, 
    Chris Steele
author_email = ju.huntenburg@gmail.com
license = Apache License, 2.0
license_file = LICENSE
platforms = OS Independent
classifiers =
    Development Status :: 4 - Beta
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
keywords =
    MRI
    high-resolution
    laminar
    subcortex
provides = nighres

[options]
packages = find:
install_requires =
    numpy<2.0
    nibabel
    psutil>=5.9.0
    antspyx<=0.5.2
    matplotlib<=3.7
    dipy>=1.5.0
    scipy
python_requires = >=3.8
include_package_data = True
zip_safe = False

[options.extras_require]
doc =
    sphinx>=1.8.3
    pillow
    sphinx-gallery
    sphinx-rtd-theme>=0.4.2
    sklearn
    ipython
    mock
